deploy/02service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rbac-go
  name: rbac-go
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
  selector:
    app: rbac-go
